# elevator

./: CMakeLists.txt  README.md  elevator  generateInputData.py
input/: inputData.csv  inputDataDemo.csv  inputDataDemoFullLobby.csv  inputDataDemoSlowReq.csv
src/: elevator.cpp  elevator.h  floor_request.h  human_detection.cpp  human_detection.h  main.cpp
